Actions
Bug #13597
closedipf: variable may be used uninitialized in this function
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
../ipfstat.c: In function 'printlivelist': ../ipfstat.c:894:13: error: 'array.fr_next' may be used uninitialized in this function [-Werror=maybe-uninitialized] 894 | } while (fp->fr_next != NULL); | ~~^~~~~~~~~ cc1: all warnings being treated as errors ../common/printhash_live.c: In function 'printhash_live': ../common/printhash_live.c:75:5: error: 'printed' may be used uninitialized in this function [-Werror=maybe-uninitialized] 75 | if (printed == 0) | ^ cc1: all warnings being treated as errors ../common/printpool_live.c: In function 'printpool_live': ../common/printpool_live.c:75:5: error: 'printed' may be used uninitialized in this function [-Werror=maybe-uninitialized] 75 | if (printed == 0) | ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Updated by Electric Monk about 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ef1266efec4565fb64aeda150f6100dadde8bca8
commit ef1266efec4565fb64aeda150f6100dadde8bca8 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-10T09:31:29.000Z 13597 ipf: variable may be used uninitialized in this function Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Robert French <robert@robertdfrench.me> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Actions