13597 ipf: variable may be used uninitialized in this function Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Robert French <robert@robertdfrench.me> Approved by: Joshua M. Clulow <josh@sysmgr.org>