usr/src/cmd/ipf/lib/common/printpool_live.c
@@ -7,8 +7,6 @@
  * Use is subject to license terms.
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include <sys/ioctl.h>
 #include "ipf.h"
 #include "netinet/ipl.h"
@@ -25,7 +23,7 @@ int opts;
 {
 	ip_pool_node_t entry, *top, *node;
 	ipflookupiter_t iter;
-	int i, printed, last;
+	int i, printed = 0, last;
 	ipfobj_t obj;
 
 	if ((name != NULL) && strncmp(name, pool->ipo_name, FR_GROUPLEN))
